commit before I take a dinner break

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,18 @@
 <div class="container text-center">
-	<h1>Users Index Page</h1>
+	<h1 >Users Index Page</h1>
 
 <div class="row">
-	<%= link_to "Add a new Contact", new_user_path %>
+	
+	<div class="col-md-12"><%= link_to "Add a new Contact", new_user_path %></div>
 		<% @users.each do |user| %>
-	<div class="row">
-			<%= user.first_name %>
-			<%= user.last_name %>
+	<div class="row ">
+		<div class="col-md-5 boxed text-center">
+			<%= link_to "#{user.first_name + user.last_name}", user_path(user) %>
+			
 
 			<%= link_to "Edit Contact", edit_user_path(user) %>
 			<%= link_to 'Delete User', user, method: :delete, data: { confirm: 'Are you sure?' } %>
+		</div>
 		</div>
 		<% end %>
 	</div>
