--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,5 @@
 
-@import "bootstrap-sprockets";
-@import "bootstrap";
+@import 'bootstrap_overrides'
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
