--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -1,3 +1,12 @@
 
+.boxed{
+	background-color: #c8dbc8;
+	border: solid black 1px;
+	border-radius: 10px;
+	padding: 10px;
+	margin: 10px;
+	position: relative;
+}
 
-@import "application"
+@import "bootstrap-sprockets";
+@import "bootstrap";
