all logic works, time to do styling and clean up presentation

--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -8,5 +8,13 @@
 	position: relative;
 }
 
+.thead{
+	background-color: #48f04e;
+	border: 1px green solid;
+	font-style: bold;
+	font-size: 17px;
+}
+
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
