--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,24 @@
 <div class="container text-center">
-	<h1 >Users Index Page</h1>
+	<h1 >Your Contacts</h1>
+	<%= link_to "Order by First name?", :sort => "first_name" %>
+	<%= link_to "Order by last name?", :sort => "last_name" %>
 
 <div class="row">
 	
 	<div class="col-md-12"><%= link_to "Add a new Contact", new_user_path %></div>
+</div>
 		<% @users.each do |user| %>
 	<div class="row ">
-		<div class="col-md-5 boxed text-center">
-			<%= link_to "#{user.first_name + user.last_name}", user_path(user) %>
-			
-
-			<%= link_to "Edit Contact", edit_user_path(user) %>
-			<%= link_to 'Delete User', user, method: :delete, data: { confirm: 'Are you sure?' } %>
+		<div class="col-md-6 col-md-offset-3 boxed text-center">
+			<div class="row">	
+				<div class="contact-name"><%= link_to "#{user.first_name + " " + user.last_name}", user_path(user) %></div>
+			</div>
+			<div class="row">
+				<div class="col-md-6"><%= link_to "Edit Contact", edit_user_path(user) %></div>
+				<div class="col-md-6"><%= link_to 'Delete User', user, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+			</div>
 		</div>
 		</div>
 		<% end %>
-	</div>
+	
 </div>
