--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Contact Page for <%= @user.first_name + @user.last_name %> </h1>
+<h1>Contact Page for <%= @user.first_name %> <%= @user.last_name %> </h1>
 
 <h2>Contact Addresses: </h2>
 
@@ -9,7 +9,7 @@
 	<div class="col-md-3 thead">Zip</div>
 </div>
 	<% @addrs.each do |address| %>
-	<div class="row">
+	<div class="row tbody">
 		<div class="col-md-3"><%= address.street %></div>
 		<div class="col-md-3"><%= address.city %></div>
 		<div class="col-md-3"><%= address.state %></div>
