final commit, cleaned up presentation, added sort by first/last name functionality

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,9 @@
-<h1>Update your Contact info: </h1>
+<div class="row">
+	<div class="col=md-10 text-center">
+		<h1>Update your Customer info: </h1>
 
-<%= render "new_contact_form" %>
+		<%= render "new_contact_form" %>
+		<br />
+		<%= link_to "add Customer Addresses", user_path %>
+	</div>
+</div>
