--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,7 @@
-<h1>Add a new Contact</h1>
+<div class="row">
+	<div class="col-md-10 text-center">
 
-
-<%= render "new_contact_form" %>
+		<h1>Add a new Customer</h1>
+		<%= render "new_contact_form" %>
+	</div>
+</div>
