--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
-<h1>Contact Page for <%= @user.first_name %> <%= @user.last_name %> </h1>
+<h1>Customer Page for <%= @user.first_name %> <%= @user.last_name %> </h1>
 
-<h2>Contact Addresses: </h2>
+<h2>Customer Addresses: </h2>
 
 <div class ="row">
 	<div class="col-md-3 thead">Street Address</div>
