--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container text-center">
-	<h1 >Your Contacts</h1>
+	<h1 >Your Customers</h1>
 	<%= link_to "Order by First name?", :sort => "first_name" %>
 	<%= link_to "Order by last name?", :sort => "last_name" %>
 
@@ -14,8 +14,8 @@
 				<div class="contact-name"><%= link_to "#{user.first_name + " " + user.last_name}", user_path(user) %></div>
 			</div>
 			<div class="row">
-				<div class="col-md-6"><%= link_to "Edit Contact", edit_user_path(user) %></div>
-				<div class="col-md-6"><%= link_to 'Delete User', user, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+				<div class="col-md-6"><%= link_to "Edit Customer", edit_user_path(user) %></div>
+				<div class="col-md-6"><%= link_to 'Delete Customer', user, method: :delete, data: { confirm: 'Are you sure?' } %></div>
 			</div>
 		</div>
 		</div>
